welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:28: error: value avance is not a member of Unit
  avance(2);gauche()avance(2);droite();
                    ^